# MiniSynth

./: .gitignore  CMakeLists.txt  README.md
Resources/Presets/Factory/: Analog_Chorus_Pad.minisynth.json  Blade_Lead.minisynth.json  Dub_Wub.minisynth.json  Init.minisynth.json  Metal_Fm_Pluck.minisynth.json  Noise_Drone.minisynth.json  Noisy_Snare.minisynth.json  Poly_Keys.minisynth.json  Punchy_Sub_Bass.minisynth.json  Pwm_Strings.minisynth.json  Soft_Square_Bass.minisynth.json  Sparkle_Pluck.minisynth.json  Vintage_Brass.minisynth.json
Source/: JuceIncludes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Noise.h  PolyBLEPOsc.h  PulseOsc.h  SynthVoice.cpp  SynthVoice.h
Source/presets/: PresetManager.cpp  PresetManager.h
